--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
+frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -21,6 +19,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/src/assets/
 
 .env
